[package]
name = "rust-chat"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"
overflow-checks = false
debug-assertions = false
debug = false
lto = true

[dependencies]
actix = "0.9"
actix-web-actors = "2.0"

[dependencies.bb8-postgres]
version = "0.4"

[dependencies.dotenv]
version = "0.15"

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.7"

[dependencies.tokio-postgres]
version = "0.5"
features = []

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
default-features = false
version = "1.0"

[dependencies.postgres-types]
version = "0.1"
features = ["derive", "with-chrono-0_4"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.actix-rt]
version = "1.0"

[dependencies.actix-web]
version = "2.0"